# CSE3505-MRI-Classifier

./: Brain_Tumor.ipynb  README.md  pyproject.toml  requirements.txt
CSE3505-MRI-Classifier/: main.py
app/: main.py
