[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Siddharth Suresh <siddh.suresh@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
